# financial-advisor-agentic-assistant

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
app/: DEPLOYMENT.MD  EVALS.md  eval_config.json  eval_wrapper.py  global_banking_customer_analytics.csv  main.py  requirements.txt
app/financial_advisor_agent/: __init__.py  agent.json  agent.py  prompt.py  set_with_conversation_scenarios.evalset.json  smoke-test-crm-evalset.json  smoke_test_enterprise_docs.evalset.json  smoketestcrm.evalset.json
app/financial_advisor_agent/config/: settings.py
app/financial_advisor_agent/deployment/: README.md  deploy-app-engine.py  deploy-cloud-run.py
app/financial_advisor_agent/evals/: smoke_test_overall.evalset.json
app/financial_advisor_agent/sub_agents/compliance_checker_agent/: __init__.py  agent.py  compliance_checklist_tool.py  disclaimer_template_tool.py  prompt.py
app/financial_advisor_agent/sub_agents/crm_leads_insights_agent/: __init__.py  agent.py  prompt.py  tools.py
app/financial_advisor_agent/sub_agents/enterprise_docs_agent/: __init__.py  agent.py  load_docs.py  prompt.py  vector_search_tool.py
app/financial_advisor_agent/sub_agents/google_research_agent/: __init__.py  agent.py  prompt.py
app/financial_advisor_agent/utils/: logger.py
docs/architecture/: architecture_summary.md
docs/pdfs/: investment_conversations.json
tests/: test_compliance_agent.py
